"ChangeLog"

2007-02-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-87-merged-chpsim-03-10:
	  Branch merge.


2007-02-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-86:
	  config/cxx_STL.m4: check whether SGI extension bitset member 
		functions are actually *linkable* using g++.
		Extends tests to compile and link (separately)


2007-02-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-83:
	  configure.ac: new autoconf macro tests for SGI extensions
		in std::bitset, tests added to config/cxx_STL.m4.
	  config/builtin_funcs.m4: testing compiler's builtin functions
		such as popcount (mostly bit-operations)


2007-02-13	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-81:
	  Executables are now built using dynamic shared library!


2007-02-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79:
	  Makefile.am: distclean Makefile.orig if produced by patching Makefile.
	  README.CVS: notes about updates and patch creation.


2007-02-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-72-merged-chpsim-02-19:
	  Branch merge.


2007-01-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-71:
	  AC_SUBST X11_INCLUDE and X11_LDPATH.  


	* HACKT-00-01-04-main-00-80-70:
	  configure.ac, config/guile.m4: autoconf macros for checking
		guile-config and setting appropriate AC_SUBST variables.  


2007-01-24	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69:
	  Global Makefile maintainence.  Fixed some broken dependencies.  
	  Make.stddef: added useful strip srcdir macros


2007-01-23	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-68:
	  configure.ac: now generate dox/{chpsim,prsim}/Makefile


2007-01-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-64-merged-chpsim-01-54:
	  Major branch merge of -chpsim-01.